[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameSystems/LevelUp.gd" type="Script" id=1]
[ext_resource path="res://Fonts/NicoClean-Monospaced.otf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 33
font_data = ExtResource( 2 )

[node name="LevelUp" type="Node2D"]
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="LevelStorage" type="HBoxContainer" parent="."]
margin_left = 64.0
margin_top = 424.0
margin_right = 784.0
margin_bottom = 600.0

[node name="Health" type="Button" parent="LevelStorage"]
margin_right = 162.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
text = "Health"
flat = true

[node name="PSI" type="Button" parent="LevelStorage"]
margin_left = 166.0
margin_right = 303.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
text = " PSI "
flat = true

[node name="Offence" type="Button" parent="LevelStorage"]
margin_left = 307.0
margin_right = 494.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
text = "Offence"
flat = true

[node name="Defend" type="Button" parent="LevelStorage"]
margin_left = 498.0
margin_right = 685.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
text = "Defence"
flat = true

[connection signal="pressed" from="LevelStorage/Health" to="." method="_on_Health_pressed"]
[connection signal="pressed" from="LevelStorage/PSI" to="." method="_on_PSI_pressed"]
[connection signal="pressed" from="LevelStorage/Offence" to="." method="_on_Offence_pressed"]
[connection signal="pressed" from="LevelStorage/Defend" to="." method="_on_Defend_pressed"]
